// @generated
// This file is automatically generated by Kanel. Do not modify manually.

/** Identifier type for public.migrations */
export type MigrationsMigrationId = number & { __brand: 'MigrationsMigrationId' };

/** Represents the table public.migrations */
export default interface Migrations {
  migration_id: MigrationsMigrationId;

  created_at: Date;

  name: string | null;
}

/** Represents the initializer for the table public.migrations */
export interface MigrationsInitializer {
  /** Default value: nextval('migrations_migration_id_seq'::regclass) */
  migration_id?: MigrationsMigrationId;

  /** Default value: now() */
  created_at?: Date;

  name?: string | null;
}

/** Represents the mutator for the table public.migrations */
export interface MigrationsMutator {
  migration_id?: MigrationsMigrationId;

  created_at?: Date;

  name?: string | null;
}
