// @generated
// This file is automatically generated by Kanel. Do not modify manually.

import { contactStatus, type default as ContactStatus } from './ContactStatus';
import { contactSubscriptions, type default as ContactSubscriptions } from './ContactSubscriptions';
import { z } from 'zod';

/** Identifier type for public.contacts */
export type ContactsUuid = string & { __brand: 'public.contacts' };

/**
 * Represents the table public.contacts
 * Stores contact details including leads, prospects, and customers.
 */
export default interface Contacts {
  /** Universally unique identifier for the contact. */
  uuid: ContactsUuid;

  /** Primary email used for contact identification and communication. */
  email: string;

  /** Stage of the contact in the sales funnel: lead, prospect, or customer. */
  status: ContactStatus;

  /** List of subscriptions assigned to the contact. */
  subscriptions: ContactSubscriptions[] | null;

  /** User who created the record. */
  created_by: string | null;

  /** Timestamp when the record was created. */
  created_date: Date | null;

  /** User who last updated the record. */
  updated_by: string | null;

  /** Timestamp when the record was last updated. */
  updated_date: Date | null;

  /** Stores the list of email identifiers (e.g., "welcome", "20250401_newsletter") that have been sent to the contact by the system. */
  sent_emails: string[] | null;

  /** Auto-incrementing serial number for easier data analysis and sequential referencing. */
  auto_serial: number;

  /** First name of the contact, typically collected during checkout or registration */
  first_name: string | null;

  /** Last name of the contact, typically collected during checkout or registration */
  last_name: string | null;

  /** Origin of the contact record: website (organic signup/purchase flow) or migration (bulk-imported from external campaigns). */
  source: string;
}

/**
 * Represents the initializer for the table public.contacts
 * Stores contact details including leads, prospects, and customers.
 */
export interface ContactsInitializer {
  /**
   * Universally unique identifier for the contact.
   * Default value: uuid_generate_v4()
   */
  uuid?: ContactsUuid;

  /** Primary email used for contact identification and communication. */
  email: string;

  /** Stage of the contact in the sales funnel: lead, prospect, or customer. */
  status: ContactStatus;

  /** List of subscriptions assigned to the contact. */
  subscriptions?: ContactSubscriptions[] | null;

  /** User who created the record. */
  created_by?: string | null;

  /** Timestamp when the record was created. */
  created_date?: Date | null;

  /** User who last updated the record. */
  updated_by?: string | null;

  /** Timestamp when the record was last updated. */
  updated_date?: Date | null;

  /** Stores the list of email identifiers (e.g., "welcome", "20250401_newsletter") that have been sent to the contact by the system. */
  sent_emails?: string[] | null;

  /**
   * Auto-incrementing serial number for easier data analysis and sequential referencing.
   * Default value: nextval('contacts_auto_serial_seq'::regclass)
   */
  auto_serial?: number;

  /** First name of the contact, typically collected during checkout or registration */
  first_name?: string | null;

  /** Last name of the contact, typically collected during checkout or registration */
  last_name?: string | null;

  /** Origin of the contact record: website (organic signup/purchase flow) or migration (bulk-imported from external campaigns). */
  source: string;
}

/**
 * Represents the mutator for the table public.contacts
 * Stores contact details including leads, prospects, and customers.
 */
export interface ContactsMutator {
  /** Universally unique identifier for the contact. */
  uuid?: ContactsUuid;

  /** Primary email used for contact identification and communication. */
  email?: string;

  /** Stage of the contact in the sales funnel: lead, prospect, or customer. */
  status?: ContactStatus;

  /** List of subscriptions assigned to the contact. */
  subscriptions?: ContactSubscriptions[] | null;

  /** User who created the record. */
  created_by?: string | null;

  /** Timestamp when the record was created. */
  created_date?: Date | null;

  /** User who last updated the record. */
  updated_by?: string | null;

  /** Timestamp when the record was last updated. */
  updated_date?: Date | null;

  /** Stores the list of email identifiers (e.g., "welcome", "20250401_newsletter") that have been sent to the contact by the system. */
  sent_emails?: string[] | null;

  /** Auto-incrementing serial number for easier data analysis and sequential referencing. */
  auto_serial?: number;

  /** First name of the contact, typically collected during checkout or registration */
  first_name?: string | null;

  /** Last name of the contact, typically collected during checkout or registration */
  last_name?: string | null;

  /** Origin of the contact record: website (organic signup/purchase flow) or migration (bulk-imported from external campaigns). */
  source?: string;
}

export const contactsUuid = z.string() as unknown as z.Schema<ContactsUuid>;

export const contacts = z.object({
  uuid: contactsUuid,
  email: z.string(),
  status: contactStatus,
  subscriptions: contactSubscriptions.nullable(),
  created_by: z.string().nullable(),
  created_date: z.date().nullable(),
  updated_by: z.string().nullable(),
  updated_date: z.date().nullable(),
  sent_emails: z.string().array().nullable(),
  auto_serial: z.number(),
  first_name: z.string().nullable(),
  last_name: z.string().nullable(),
  source: z.string(),
}) as unknown as z.Schema<Contacts>;

export const contactsInitializer = z.object({
  uuid: contactsUuid.optional(),
  email: z.string(),
  status: contactStatus,
  subscriptions: contactSubscriptions.optional().nullable(),
  created_by: z.string().optional().nullable(),
  created_date: z.date().optional().nullable(),
  updated_by: z.string().optional().nullable(),
  updated_date: z.date().optional().nullable(),
  sent_emails: z.string().array().optional().nullable(),
  auto_serial: z.number().optional(),
  first_name: z.string().optional().nullable(),
  last_name: z.string().optional().nullable(),
  source: z.string(),
}) as unknown as z.Schema<ContactsInitializer>;

export const contactsMutator = z.object({
  uuid: contactsUuid.optional(),
  email: z.string().optional(),
  status: contactStatus.optional(),
  subscriptions: contactSubscriptions.optional().nullable(),
  created_by: z.string().optional().nullable(),
  created_date: z.date().optional().nullable(),
  updated_by: z.string().optional().nullable(),
  updated_date: z.date().optional().nullable(),
  sent_emails: z.string().array().optional().nullable(),
  auto_serial: z.number().optional(),
  first_name: z.string().optional().nullable(),
  last_name: z.string().optional().nullable(),
  source: z.string().optional(),
}) as unknown as z.Schema<ContactsMutator>;
